@@ -1,6 +1,6 @@
-# $Id: Makefile.am,v 1.2 1999/08/27 21:03:21 sas Exp $
+# $Id: Makefile.am,v 1.3 1999/09/17 05:40:59 sas Exp $
 
 INCLUDES=@INCLUDES@ -I@top_srcdir@ -I@top_srcdir@/libzend
 noinst_LIBRARIES=libphpext_session.a
-libphpext_session_a_SOURCES=session.c mod_files.c mod_mm.c
+libphpext_session_a_SOURCES=session.c mod_files.c mod_mm.c mod_user.c
 
