@@ -104,6 +104,7 @@ PHP_FUNCTION(session_encode);
 PHP_FUNCTION(session_start);
 PHP_FUNCTION(session_destroy);
 PHP_FUNCTION(session_unset);
+PHP_FUNCTION(session_set_save_handler);
 
 #ifdef ZTS
 #define PSLS_D php_ps_globals *ps_globals
